fixed the layout collapse when an error message is displayed

--- a/app/assets/stylesheets/modules/user_registration.scss
+++ b/app/assets/stylesheets/modules/user_registration.scss
@@ -75,6 +75,9 @@ body {
           background-color: #ea352d;
           @include require-sign;
         }
+        .field_with_errors{
+          display: contents;
+        }
         &__birth-day {
           height: 56px;
           margin-top: 5px;
